fixed alignment with ipad

--- a/src/layout/SideNavLayout/SideNavLayout.css
+++ b/src/layout/SideNavLayout/SideNavLayout.css
@@ -56,7 +56,7 @@
         height: 0rem;
     }
 
-    .content {}
-
-
+    .content {
+        width: 100%;
+    }
 }
