--- a/src/views/componentContent/componentContent.css
+++ b/src/views/componentContent/componentContent.css
@@ -2,4 +2,5 @@
     text-align: left;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
